k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apc-api
  namespace: apc-prod
spec:
  ingressClassName: nginx
  rules:
    - host: apc-prod.172.168.206.73.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apc-api
                port:
                  number: 80
